--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
     "@graphql-codegen/typescript-resolvers": "^2.7.12",
     "concurrently": "^7.6.0",
     "dotenv": "^16.0.3",
+    "esbuild": "^0.17.5",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
   "dependencies": {
     "@apollo/server": "^4.3.2",
+    "@as-integrations/aws-lambda": "^2.0.0",
     "zod": "^3.20.2"
   },
   "scripts": {
+    "build": "tsc --project tsconfig.json",
     "dev": "concurrently -k \"nodemon src/dev.ts\" \"graphql-codegen --watch\"",
     "generate": "graphql-codegen"
   },
