add network event type

--- a/codegen.yml
+++ b/codegen.yml
@@ -20,6 +20,7 @@ generates:
         DateTime: Date
       mappers:
         ConsoleLogEvent: ./mappers#ConsoleLogEventModel
+        NetworkEvent: ./mappers#NetworkEventModel
         TestExecution: ./mappers#TestExecutionModel
         TestExecutionEventConnection: ./mappers#TestExecutionEventConnectionModel
         TestExecutionEventEdge: ./mappers#TestExecutionEventEdgeModel
