--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Login to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Build, tag, and push image to Amazon ECR 🏷
+      - name: Push
         env:
           ECR_REPOSITORY: ${{ vars.AWS_ECR_REPOSITORY }}
         run: |
