--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,8 +36,7 @@
     // "allowUmdGlobalAccess": true,                     /* Allow accessing UMD globals from modules. */
     // "moduleSuffixes": [],                             /* List of file name suffixes to search when resolving a module. */
 
-    // TODO: unset resolveJsonModule once we no longer need to import json
-    "resolveJsonModule": true,                           /* Enable importing .json files. */
+    // "resolveJsonModule": true,                        /* Enable importing .json files. */
     // "noResolve": true,                                /* Disallow 'import's, 'require's or '<reference>'s from expanding the number of files TypeScript should add to a project. */
 
     /* JavaScript Support */
