--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "aws-sdk": "^2.1337.0",
     "graphql": "^17.0.0-alpha.2",
     "graphql-date-scalars": "^0.2.0",
+    "lru-cache": "^8.0.4",
     "zod": "^3.20.2"
   },
   "overrides": {
