Remove hardcoded test execution id

--- a/.env.shadow
+++ b/.env.shadow
@@ -4,3 +4,4 @@ AWS_SESSION_TOKEN=
 AWS_BUCKET_REGION=region
 AWS_ACCESS_KEY_ID=access_key
 AWS_SECRET_ACCESS_KEY=secret_key
+AWS_BUCKET_NAME=bucket_name
