--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@as-integrations/aws-lambda": "^2.0.0",
     "@aws-sdk/client-s3": "^3.293.0",
     "aws-sdk": "^2.1337.0",
+    "dataloader": "^2.2.2",
     "graphql": "^17.0.0-alpha.2",
     "graphql-date-scalars": "^0.2.0",
     "lru-cache": "^8.0.4",
