Init connection of ss to s3

--- a/codegen.yml
+++ b/codegen.yml
@@ -39,6 +39,7 @@ generates:
         CommandEventEdge: ./mappers#CommandEventEdgeModel
         CommandEventConnection: ./mappers#CommandEventConnectionModel
         TestExecutionSnapshot: ./mappers#TestExecutionSnapshotModel
+        TestExecutionScreenshot: ./mappers#TestExecutionScreenshotModel
     plugins:
       - typescript
       - typescript-resolvers
