--- a/.env.shadow
+++ b/.env.shadow
@@ -5,3 +5,4 @@ AWS_BUCKET_REGION=region
 AWS_ACCESS_KEY_ID=access_key
 AWS_SECRET_ACCESS_KEY=secret_key
 AWS_BUCKET_NAME=bucket_name
+EXPIRES_IN=3600
