--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "otf-server",
+  "name": "@testerloop/server",
+  "version": "1.0.0",
   "devDependencies": {
     "@graphql-codegen/cli": "^2.16.4",
     "@graphql-codegen/typescript": "^2.8.7",
