--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "graphql": "^17.0.0-alpha.2"
   },
   "scripts": {
-    "build": "tsc --project tsconfig.json",
+    "build": "tsc --project tsconfig.json && cp -r src/schema/ dist/schema/",
     "dev": "concurrently -k \"nodemon src/dev.ts\" \"graphql-codegen --watch\"",
     "generate": "graphql-codegen"
   },
