Cleanup AWS_BUCKET_PATH optionality

--- a/.env.shadow
+++ b/.env.shadow
@@ -5,4 +5,5 @@ AWS_BUCKET_REGION=region
 AWS_ACCESS_KEY_ID=access_key
 AWS_SECRET_ACCESS_KEY=secret_key
 AWS_BUCKET_NAME=bucket_name
+AWS_BUCKET_PATH=
 EXPIRES_IN=3600
