--- a/.github/workflows/increment-version.yml
+++ b/.github/workflows/increment-version.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
         with:
-          token: ${{ secrets.OVERLOOP_ACCESS_TOKEN }}
+          token: ${{ secrets.TESTERLOOP_ACCESS_TOKEN }}
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
@@ -29,12 +29,12 @@ jobs:
         id: github_release
         uses: mikepenz/release-changelog-builder-action@v3
         env:
-          GITHUB_TOKEN: ${{ secrets.OVERLOOP_ACCESS_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.TESTERLOOP_ACCESS_TOKEN }}
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.OVERLOOP_ACCESS_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.TESTERLOOP_ACCESS_TOKEN }}
         with:
           tag_name: ${{ github.event.inputs.version }}
           release_name: ${{ github.event.inputs.version }}
