--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@apollo/server": "^4.3.2",
         "@as-integrations/aws-lambda": "^2.0.0",
         "@aws-sdk/client-s3": "^3.293.0",
+        "@aws-sdk/s3-presigned-post": "^3.293.0",
         "@aws-sdk/s3-request-presigner": "^3.293.0",
         "aws-sdk": "^2.1337.0",
         "dataloader": "^2.2.2",
