--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "dotenv": "^16.0.3",
         "esbuild": "^0.17.5",
         "nodemon": "^2.0.20",
+        "prisma": "^4.16.2",
         "ts-node": "^10.9.1",
         "typescript": "^4.9.4"
     },
