--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@as-integrations/aws-lambda": "^2.0.0",
         "@aws-sdk/client-s3": "^3.293.0",
         "@aws-sdk/s3-request-presigner": "^3.293.0",
+        "@prisma/client": "^4.16.2",
         "aws-sdk": "^2.1337.0",
         "dataloader": "^2.2.2",
         "graphql": "^17.0.0-alpha.2",
