--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
         "@graphql-codegen/cli": "^2.16.4",
         "@graphql-codegen/typescript": "^2.8.7",
         "@graphql-codegen/typescript-resolvers": "^2.7.12",
+        "@types/jest": "^29.5.2",
         "concurrently": "^7.6.0",
         "dotenv": "^16.0.3",
         "esbuild": "^0.17.5",
+        "jest": "^29.6.1",
         "nodemon": "^2.0.20",
         "prisma": "^4.16.2",
+        "ts-jest": "^29.1.1",
         "ts-node": "^10.9.1",
         "typescript": "^4.9.4"
     },
@@ -24,6 +27,7 @@
         "graphql": "^17.0.0-alpha.2",
         "graphql-date-scalars": "^0.2.0",
         "lru-cache": "^8.0.4",
+        "prisma-slug": "^1.0.0-beta.1",
         "zod": "^3.20.2"
     },
     "overrides": {
