--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "@graphql-codegen/cli": "^2.16.4",
         "@graphql-codegen/typescript": "^2.8.7",
         "@graphql-codegen/typescript-resolvers": "^2.7.12",
+        "@types/uuid": "^9.0.2",
         "concurrently": "^7.6.0",
         "dotenv": "^16.0.3",
         "esbuild": "^0.17.5",
@@ -23,6 +24,7 @@
         "graphql": "^17.0.0-alpha.2",
         "graphql-date-scalars": "^0.2.0",
         "lru-cache": "^8.0.4",
+        "uuid": "^9.0.0",
         "zod": "^3.20.2"
     },
     "overrides": {
