--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "graphql": "^17.0.0-alpha.2",
         "graphql-date-scalars": "^0.2.0",
         "lru-cache": "^8.0.4",
+        "slugify": "^1.6.6",
         "zod": "^3.20.2"
     },
     "overrides": {
