--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
         "@graphql-codegen/cli": "^2.16.4",
         "@graphql-codegen/typescript": "^2.8.7",
         "@graphql-codegen/typescript-resolvers": "^2.7.12",
-        "@types/uuid": "^9.0.2",
         "@types/jest": "^29.5.2",
+        "@types/uuid": "^9.0.2",
         "concurrently": "^7.6.0",
         "dotenv": "^16.0.3",
         "esbuild": "^0.17.5",
@@ -28,10 +28,11 @@
         "dataloader": "^2.2.2",
         "graphql": "^17.0.0-alpha.2",
         "graphql-date-scalars": "^0.2.0",
+        "http": "^0.0.1-security",
         "jest-mock-extended": "^3.0.4",
         "lru-cache": "^8.0.4",
-        "uuid": "^9.0.0",
         "slugify": "^1.6.6",
+        "uuid": "^9.0.0",
         "zod": "^3.20.2"
     },
     "overrides": {
