--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "@graphql-codegen/typescript": "^2.8.7",
         "@graphql-codegen/typescript-resolvers": "^2.7.12",
         "@types/jest": "^29.5.2",
+        "@types/uuid": "^9.0.2",
         "concurrently": "^7.6.0",
         "dotenv": "^16.0.3",
         "esbuild": "^0.17.5",
@@ -20,15 +21,18 @@
         "@apollo/server": "^4.3.2",
         "@as-integrations/aws-lambda": "^2.0.0",
         "@aws-sdk/client-s3": "^3.293.0",
+        "@aws-sdk/s3-presigned-post": "^3.293.0",
         "@aws-sdk/s3-request-presigner": "^3.293.0",
         "@prisma/client": "^4.16.2",
         "aws-sdk": "^2.1337.0",
         "dataloader": "^2.2.2",
         "graphql": "^17.0.0-alpha.2",
         "graphql-date-scalars": "^0.2.0",
+        "http": "^0.0.1-security",
         "jest-mock-extended": "^3.0.4",
         "lru-cache": "^8.0.4",
         "slugify": "^1.6.6",
+        "uuid": "^9.0.0",
         "zod": "^3.20.2"
     },
     "overrides": {
