updated readme on how to run tests and added test script to package

--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "scripts": {
         "build": "tsc --project tsconfig.json && cp -r src/schema/ dist/schema/",
         "dev": "concurrently -k \"nodemon src/dev.ts\" \"graphql-codegen --watch\"",
-        "generate": "graphql-codegen"
+        "generate": "graphql-codegen",
+        "test": "npx jest"
     },
     "type": "module"
 }
