#464 add repository class (#89)
* Clean up lambda references (#83)

* Remove lambda references

* Update Readme

* add env variable for DB connection

* Clean up lambda references (#83)

* Remove lambda references

* Update Readme

* add env variable for DB connection

* Copy prisma directory to dist

* Add prisma from dev to dependencies

* 0.1.12-multitenant version

* 0.1.1-2.1

* 0.1.13

* Update tests for generateSlug

* ignore spec folder in npm package

* fix npm run build

* Allow pipeline to increase a version

* 0.1.13

* test

* bump version, add rm dist directory when creating a new build

* 0.1.14

* Squashed commit of the following:

commit e3a20ca7080f738a3d2fc93de4e98b233137fc85
Author: Joe Burgess <josephburgess@gmail.com>
Date:   Tue Jul 18 19:03:16 2023 +0100

    Add repository class (#88)

    * add repository class

    * amend error message

    * amend import

    * remove tests for now

    * add prismadb class with interface

    * update context and remove handleapikey

    * remove

    * remove baseprismaclient

    * update mutation

    * move logic for checking organisation into util functions

* Add repo class, update resolvers and context to use repo class

* add createOrganisation

* add destructuring

* update package

* lint fix

---------

Co-authored-by: Damian Lawrynowicz <fabrykasoftu@gmail.com>
Co-authored-by: GitHub Actions <41898282+github-actions[bot]@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@testerloop/server",
-    "version": "0.1.12",
+    "version": "0.1.14",
     "devDependencies": {
         "@graphql-codegen/cli": "^2.16.4",
         "@graphql-codegen/typescript": "^2.8.7",
@@ -30,6 +30,7 @@
         "@aws-sdk/client-s3": "^3.293.0",
         "@aws-sdk/s3-presigned-post": "^3.293.0",
         "@aws-sdk/s3-request-presigner": "^3.293.0",
+        "prisma": "^4.16.2",
         "@prisma/client": "^4.16.2",
         "aws-sdk": "^2.1337.0",
         "dataloader": "^2.2.2",
@@ -46,7 +47,7 @@
         "graphql": "^17.0.0-alpha.2"
     },
     "scripts": {
-        "build": "tsc --project tsconfig.json && cp -r src/schema/ dist/schema/",
+        "build": "rm -rf ./dist && tsc --project tsconfig.json && cp -r src/schema/ dist/schema/ && cp -r prisma/ dist/prisma/",
         "dev": "concurrently -k \"nodemon src/dev.ts\" \"graphql-codegen --watch\"",
         "generate": "graphql-codegen",
         "lint": "eslint --ext .ts src",
