--- a/.env.shadow
+++ b/.env.shadow
@@ -1,5 +1,8 @@
 PORT=8080
 
+DB_ENABLED=true
+DATABASE_URL=postgres://creds/testerloop_server
+
 AWS_SESSION_TOKEN=
 AWS_BUCKET_REGION=region
 AWS_ACCESS_KEY_ID=access_key
