--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
         "@aws-sdk/s3-presigned-post": "^3.293.0",
         "@aws-sdk/s3-request-presigner": "^3.293.0",
         "@prisma/client": "^4.16.2",
-        "aws-sdk": "^2.1337.0",
+        "aws-jwt-verify": "^4.0.0",
+        "aws-sdk": "^2.1418.0",
         "dataloader": "^2.2.2",
         "graphql": "^17.0.0-alpha.2",
         "graphql-date-scalars": "^0.2.0",
