update env shadow

--- a/.env.shadow
+++ b/.env.shadow
@@ -10,3 +10,6 @@ AWS_SECRET_ACCESS_KEY=secret_key
 AWS_BUCKET_NAME=bucket_name
 AWS_BUCKET_PATH=
 EXPIRES_IN=3600
+
+COGNITO_USER_POOL_ID=
+COGNITO_POOL_WEB_CLIENT_ID=
