--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
         "lint": "eslint --ext .ts src",
         "lint:fix": "eslint --fix --ext .ts src",
         "prettier": "npx prettier src --check",
-        "prettier:fix": "npm run prettier -- --write"
+        "prettier:fix": "npm run prettier -- --write",
+        "seed:db": "npx ts-node-esm prisma/seed.ts"
     },
     "type": "module"
 }
