--- a/package.json
+++ b/package.json
@@ -7,9 +7,6 @@
         "@graphql-codegen/typescript-resolvers": "^2.7.12",
         "@types/jest": "^29.5.2",
         "@types/uuid": "^9.0.2",
-        "jest": "^29.6.1",
-        "prisma": "^4.16.2",
-        "ts-jest": "^29.1.1",
         "@typescript-eslint/eslint-plugin": "^6.1.0",
         "@typescript-eslint/parser": "^6.1.0",
         "concurrently": "^7.6.0",
@@ -19,8 +16,11 @@
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-import": "^2.27.5",
         "eslint-plugin-prettier": "^5.0.0",
+        "jest": "^29.6.1",
         "nodemon": "^2.0.20",
         "prettier": "^3.0.0",
+        "prisma": "^4.16.2",
+        "ts-jest": "^29.1.1",
         "ts-node": "^10.9.1",
         "typescript": "^4.9.4"
     },
@@ -30,16 +30,20 @@
         "@aws-sdk/client-s3": "^3.293.0",
         "@aws-sdk/s3-presigned-post": "^3.293.0",
         "@aws-sdk/s3-request-presigner": "^3.293.0",
-        "prisma": "^4.16.2",
         "@prisma/client": "^4.16.2",
+        "@types/bcrypt": "^5.0.0",
         "aws-jwt-verify": "^4.0.0",
         "aws-sdk": "^2.1418.0",
+        "bcrypt": "^5.1.0",
+        "crypto-random-string": "^5.0.0",
         "dataloader": "^2.2.2",
+        "generate-api-key": "^1.0.2",
         "graphql": "^17.0.0-alpha.2",
         "graphql-date-scalars": "^0.2.0",
         "http": "^0.0.1-security",
         "jest-mock-extended": "^3.0.4",
         "lru-cache": "^8.0.4",
+        "prisma": "^4.16.2",
         "slugify": "^1.6.6",
         "uuid": "^9.0.0",
         "zod": "^3.20.2"
