--- a/.github/workflows/lint-and-tests.yml
+++ b/.github/workflows/lint-and-tests.yml
@@ -1,4 +1,4 @@
-name: Lint
+name: Lint and tests
 
 on:
   pull_request:
@@ -7,7 +7,7 @@ on:
       - multitenant
 
 jobs:
-  lint:
+  lintAndTests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -15,4 +15,8 @@ jobs:
         with:
           node-version: '18.x'
       - run: npm install
-      - run: npm run lint
+
+      - name: Run linter
+        run: npm run lint
+      - name: Run tests
+        run: npm run test:cov -- --coverageReporters json-summary
