trigger lint and tests on merge

--- a/.github/workflows/lint-and-tests.yml
+++ b/.github/workflows/lint-and-tests.yml
@@ -1,6 +1,10 @@
 name: Lint and tests
 
 on:
+  push:
+    branches:
+      - master
+      - multitenant
   pull_request:
     branches:
       - master
