--- a/.github/workflows/lint-and-tests.yml
+++ b/.github/workflows/lint-and-tests.yml
@@ -23,4 +23,4 @@ jobs:
       - name: Run linter
         run: npm run lint
       - name: Run tests
-        run: npm run test -- --coverageReporters json-summary
+        run: npm run test -- --coverageReporters json-summary --passWithNoTests
