--- a/.github/workflows/release-npm-package.yml
+++ b/.github/workflows/release-npm-package.yml
@@ -22,7 +22,7 @@ jobs:
         run: npm run lint
 
       - name: Run tests
-        run: npm run test -- --coverageReporters json-summary
+        run: npm run test -- --coverageReporters json-summary --passWithNoTests
 
   publish-npm:
     needs: tests
