--- a/.github/workflows/release-npm-package.yml
+++ b/.github/workflows/release-npm-package.yml
@@ -30,6 +30,7 @@ jobs:
         permissions:
             packages: write
             contents: write
+            pull-requests: read
         steps:
             - uses: actions/checkout@v3
 
