--- a/.github/workflows/release-npm-package.yml
+++ b/.github/workflows/release-npm-package.yml
@@ -49,7 +49,8 @@ jobs:
                   tag_name: ${{ env.NEW_VERSION }}
                   release_name: ${{ env.NEW_VERSION }}
                   body: ${{ steps.github_release.outputs.changelog }}
-
+                  draft: false
+                  prerelease: true
             - uses: actions/setup-node@v3
               with:
                   node-version: 18
