--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@apollo/server": "^4.3.2",
         "@as-integrations/aws-lambda": "^2.0.0",
         "@aws-sdk/client-s3": "^3.293.0",
+        "@aws-sdk/client-ses": "^3.398.0",
         "@aws-sdk/s3-presigned-post": "^3.293.0",
         "@aws-sdk/s3-request-presigner": "^3.293.0",
         "@prisma/client": "^4.16.2",
