--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "@graphql-codegen/cli": "^2.16.4",
         "@graphql-codegen/typescript": "^2.8.7",
         "@graphql-codegen/typescript-resolvers": "^2.7.12",
+        "@types/cors": "^2.8.14",
         "@types/jest": "^29.5.2",
         "@types/uuid": "^9.0.2",
         "@typescript-eslint/eslint-plugin": "^6.1.0",
@@ -26,17 +27,19 @@
         "typescript": "^4.9.4"
     },
     "dependencies": {
-        "@apollo/server": "^4.3.2",
+        "@apollo/server": "^4.9.3",
         "@as-integrations/aws-lambda": "^2.0.0",
         "@aws-sdk/client-s3": "^3.293.0",
         "@aws-sdk/client-ses": "^3.398.0",
         "@aws-sdk/s3-presigned-post": "^3.293.0",
         "@aws-sdk/s3-request-presigner": "^3.293.0",
+        "@graphql-tools/schema": "^10.0.0",
         "@prisma/client": "^4.16.2",
         "@types/bcrypt": "^5.0.0",
         "aws-jwt-verify": "^4.0.0",
         "aws-sdk": "^2.1418.0",
         "bcrypt": "^5.1.0",
+        "cors": "^2.8.5",
         "crypto-random-string": "^5.0.0",
         "dataloader": "^2.2.2",
         "generate-api-key": "^1.0.2",
