--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "eslint-plugin-import": "^2.27.5",
         "eslint-plugin-prettier": "^5.0.0",
         "graphql-subscriptions": "^2.0.0",
+        "graphql-ws": "^5.14.1",
         "husky": "^8.0.3",
         "jest": "^29.6.1",
         "nodemon": "^2.0.20",
@@ -25,7 +26,8 @@
         "prisma": "^4.16.2",
         "ts-jest": "^29.1.1",
         "ts-node": "^10.9.1",
-        "typescript": "^4.9.4"
+        "typescript": "^4.9.4",
+        "ws": "^8.14.2"
     },
     "dependencies": {
         "@apollo/server": "^4.3.2",
