--- a/package.json
+++ b/package.json
@@ -17,8 +17,6 @@
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-import": "^2.27.5",
         "eslint-plugin-prettier": "^5.0.0",
-        "graphql-subscriptions": "^2.0.0",
-        "graphql-ws": "^5.14.1",
         "husky": "^8.0.3",
         "jest": "^29.6.1",
         "nodemon": "^2.0.20",
@@ -26,8 +24,7 @@
         "prisma": "^4.16.2",
         "ts-jest": "^29.1.1",
         "ts-node": "^10.9.1",
-        "typescript": "^4.9.4",
-        "ws": "^8.14.2"
+        "typescript": "^4.9.4"
     },
     "dependencies": {
         "@apollo/server": "^4.3.2",
@@ -46,12 +43,15 @@
         "generate-api-key": "^1.0.2",
         "graphql": "^17.0.0-alpha.2",
         "graphql-date-scalars": "^0.2.0",
+        "graphql-subscriptions": "^2.0.0",
+        "graphql-ws": "^5.14.1",
         "http": "^0.0.1-security",
         "jest-mock-extended": "^3.0.4",
         "lru-cache": "^8.0.4",
         "prisma": "^4.16.2",
         "slugify": "^1.6.6",
         "uuid": "^9.0.0",
+        "ws": "^8.14.2",
         "zod": "^3.20.2"
     },
     "overrides": {
