--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@testerloop/server",
-    "version": "0.1.21",
+    "version": "0.1.22-sony",
     "devDependencies": {
         "@graphql-codegen/cli": "^2.16.4",
         "@graphql-codegen/typescript": "^2.8.7",
